Fix for overflowing images on mobile

--- a/style.css
+++ b/style.css
@@ -806,6 +806,11 @@ big {
   margin-top: 0;
   padding: 0; }
 
+.entry-content img {
+	max-width: 100%;
+	height: auto;
+}
+
 /* Make sure embeds and iframes fit their containers. */
 embed,
 iframe,
